# aaf

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/: chat.py  multiphase.py  prompt_engineer.py  test_cli.py
src/aaf/: __init__.py  chat.py  event_handlers.py  forwarding.py  logging.py  prompts.py  threads.py  ui.py  utils.py
src/aaf/llms/: __init__.py  anthropic.py  base.py  litellm.py  ollama.py  openai.py  openrouter.py  types.py
src/aaf/proxy/: app.py
src/aaf/tools/: demo.py  web.py
src/aaf/tools_support/: schema.py
src/aaf/virtual_models/: base.py  demos.py  multiphase.py  router.py  two_phase.py  types.py
