[project]
name = "aaf"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic~=0.29.0",
    "docstring-parser~=0.16",
    "duckduckgo-search~=6.2.6",
    "fastapi~=0.111.0",
    "openai~=1.30.1",
    "prompt-toolkit~=3.0.47",
    "pydantic==2.7.1",
    "rich~=13.7.1",
    "sse-starlette~=2.1.2",
    "typer~=0.12.3",
    "typing-inspect~=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
