[project]
name = "aaf"
version = "0.3.6"
description = "AAF (Agentic AI Framework)"
readme = "README.md"
homepage = "https://github.com/rivol/aaf"
license = {text = "MIT"}
authors = [{name = "Rivo Laks", email = "hi@rivolaks.com"}]
requires-python = ">=3.12"
dependencies = [
    "anthropic~=0.37",
    "docstring-parser~=0.16",
    "duckduckgo-search~=6.2",
    "fastapi[standard]~=0.111",
    "litellm>=1.65.7",
    "openai~=1.30",
    "prompt-toolkit~=3.0",
    "pydantic~=2.7",
    "rich~=13.7",
    "sse-starlette~=2.1",
    "typer~=0.12",
    "typing-inspect~=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
py_version = "312"
atomic = true
